# vlc_plugin

./: CMakeLists.txt  README.md
include/: version.h.in
lib/: CMakeLists.txt
src/: vidigo.c
